Updated NetisHR v2 files

--- a/netishr/account.html
+++ b/netishr/account.html
@@ -394,6 +394,38 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="ibox float-e-margins">
+                            <!-- Show this ibox part when this user has more than one job title -->
+                            <div class="ibox-title">
+                                <h5>Change Role</h5>
+                                <div class="ibox-tools">
+                                    <a class="collapse-link">
+                                        <i class="fa fa-chevron-up"></i>
+                                    </a>
+                                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                                        <i class="fa fa-wrench"></i>
+                                    </a>
+                                    <ul class="dropdown-menu dropdown-user">
+                                        <li><a href="#">Config option 1</a>
+                                        </li>
+                                        <li><a href="#">Config option 2</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="ibox-content">
+                                <form class="form-horizontal">
+                                    <p>You hold more than one job title. Select current active job title.</p>
+                                    <div class="form-group">
+                                        <label class="col-lg-2 control-label">Active role: </label>
+                                        <select data-placeholder="Choose a role..." class="chosen-select">
+                                            <option value="1">Head of HR</option>
+                                            <option value="2">HR Manager</option>
+                                        </select>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                        <div class="ibox float-e-margins">
                             <div class="ibox-title">
                                 <h5>Change Email Address</h5>
                                 <div class="ibox-tools">
