--- a/netishr/index.html
+++ b/netishr/index.html
@@ -127,13 +127,16 @@
                     <li>
                         <a href="#"><i class="fa fa-flask"></i><span class="nav-label">Performance</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="graph_flot.html"><span class="nav-label">KPI<span class="fa arrow"></span></a>
+                            <li><a href="graph_flot.html"><span class="nav-label">Indicators<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <a href="perspective.html">Corporate Perspective/Objetives</a>
+                                        <a href="performance_kpi_view.html">KPIs</a>
                                     </li>
                                     <li>
-                                        <a href="performance_kpi_view.html">Assign and view KPIs</a>
+                                        <a href="#">OKRs</a>
+                                    </li>
+                                    <li>
+                                        <a href="performance_bsc.html">BSCs</a>
                                     </li>
                                 </ul>
                             </li>
@@ -141,7 +144,7 @@
                             <li><a href="#"><span class="nav-label">Planning</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <a href="#">Result Targets (KPI)</a>
+                                        <a href="performance_planning.html">Result Targets (KPI)</a>
                                     </li>
                                     <li>
                                         <a href="#">Process Targets (Competency)</a>
@@ -913,7 +916,7 @@
                         Notes
                     </a></li>
                     <li><a data-toggle="tab" href="#tab-2">
-                        Projects
+                        Tasks
                     </a></li>
                     <li class="">
                         <a data-toggle="tab" href="#tab-3">
@@ -1057,7 +1060,7 @@
                     <div id="tab-2" class="tab-pane">
 
                         <div class="sidebar-title">
-                            <h3> <i class="fa fa-cube"></i> Latest projects</h3>
+                            <h3> <i class="fa fa-cube"></i> Latest tasks</h3>
                             <small><i class="fa fa-tim"></i> You have 14 projects. 10 not completed.</small>
                         </div>
 
