--- a/netishr/performance_kpi_new.html
+++ b/netishr/performance_kpi_new.html
@@ -451,10 +451,17 @@
 
                                 <div class="form-group">
 
-                                    <label class="font-noraml">Performance Management Period (go to "Settings" to change):</label>
+                                    <label class="font-noraml">Performance Management Period (go to "<a href="settings.html">Settings</a> to change):</label>
                                     <p class="form-control-static">January 2015-December 2015</p>
 
                                     <p></p>
+
+                                    <label class="font-noraml">Your job title:</label>
+                                    <div>
+                                        <p class="form-control-static">Head of HR</p>
+                                    </div>
+
+                                    <!--
                                     <label class="font-noraml">Job title:</label>
                                     <div>
                                         <select data-placeholder="Choose a job title..." class="chosen-select" tabindex="2">
@@ -469,6 +476,9 @@
                                             <option value="Business Development Analyst"> Business Development Analyst</option>
                                         </select>
                                     </div>
+-->
+
+
                                     <!--
                                     <p></p>
                                     <label class="font-noraml">Perspective:</label>
