--- a/netishr/performance_planning.html
+++ b/netishr/performance_planning.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>NetisHR | Competency Dictionary</title>
+    <title>NetisHR | Performance Planning</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -392,19 +392,16 @@
                 <div class="col-lg-12">
                     <div class="row wrapper border-bottom white-bg page-heading">
                         <div class="col-lg-10">
-                            <h2>Competency Dictionary</h2>
+                            <h2>Performance Planning</h2>
                             <ol class="breadcrumb">
                                 <li>
                                     <a href="index.html">Home</a>
                                 </li>
                                 <li>
-                                    <a>Job</a>
-                                </li>
-                                <li>
-                                    <a>Competency Model</a>
+                                    <a>Performance</a>
                                 </li>
                                 <li class="active">
-                                    <strong>Competency Dictionary</strong>
+                                    <strong>Performance Planning</strong>
                                 </li>
                             </ol>
                         </div>
@@ -436,10 +433,10 @@
                                 <div class="tabs-container">
                                     <div class="tabs-left">
                                         <ul class="nav nav-tabs">
-                                            <li class="active"><a data-toggle="tab" href="#tab-1">Core</a></li>
-                                            <li class=""><a data-toggle="tab" href="#tab-2">Role</a></li>
-                                            <li class=""><a data-toggle="tab" href="#tab-3">Job Specific (Behavior)</a></li>
-                                            <li class=""><a data-toggle="tab" href="#tab-4">Job Specific (Technical)</a></li>
+                                            <li class="active"><a data-toggle="tab" href="#tab-1">Phase 1</a></li>
+                                            <li class=""><a data-toggle="tab" href="#tab-2">Phase 2</a></li>
+                                            <li class=""><a data-toggle="tab" href="#tab-3">Phase 3</a></li>
+                                            <li class=""><a data-toggle="tab" href="#tab-4">Phase 4</a></li>
                                         </ul>
                                         <div class="tab-content">
                                             <div id="tab-1" class="tab-pane active">
