--- a/netishr/administrator.html
+++ b/netishr/administrator.html
@@ -424,10 +424,6 @@
                                             <div class="small">Calendar of corporate events</div>
                                         </div>
                                         <p></p>
-                                        <div><a href="performance_mgmt_periods.html">Performance Management Periods</a>
-                                            <div class="small">Manage performance management periods</div>
-                                        </div>
-                                        <p></p>
                                         <div>Users Management
                                             <div class="small">Calendar of corporate events</div>
                                         </div>
@@ -483,6 +479,14 @@
                                         </div>
                                     </div>
                                     <div class="ibox-content">
+                                        <div><a href="administrator_performance.html">Settings</a>
+                                            <div class="small">Various settings for Performance</div>
+                                        </div>
+                                        <p></p>
+                                        <div><a href="performance_mgmt_periods.html">Performance Management Periods</a>
+                                            <div class="small">Manage performance management periods</div>
+                                        </div>
+
                                     </div>
                                 </div>
                             </div>
