--- a/netishr/administrator_performance.html
+++ b/netishr/administrator_performance.html
@@ -45,8 +45,8 @@
                             </a>
                             <ul class="dropdown-menu animated fadeInRight m-t-xs">
                                 <li><a href="profile.html">Profile</a></li>
-                                <li><a href="account.html">Account</a></li>
-                                <li><a href="settings.html">Settings</a></li>
+                                <li><a href="">Account</a></li>
+                                <li><a href="">Settings</a></li>
                                 <li class="divider"></li>
                                 <li><a href="login_two_columns.html">Logout</a></li>
                             </ul>
@@ -250,9 +250,6 @@
                             </li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="administrator.html"><i class="fa fa-diamond"></i><span class="nav-label">Administrator</span></a>
-                    </li>
 
 
                 </ul>
@@ -394,7 +391,7 @@
                 <div class="col-lg-12">
                     <div class="row wrapper border-bottom white-bg page-heading">
                         <div class="col-lg-10">
-                            <h2>Performance Management Periods</h2>
+                            <h2>Administrator</h2>
                             <ol class="breadcrumb">
                                 <li>
                                     <a href="index.html">Home</a>
@@ -403,7 +400,7 @@
                                     <a href="administrator.html">Administrator</a>
                                 </li>
                                 <li class="active">
-                                    <strong>Performance Management Periods</strong>
+                                    <strong>Performance</strong>
                                 </li>
                             </ol>
                         </div>
@@ -414,199 +411,26 @@
 
                     <div class="wrapper wrapper-content">
                         <div class="row">
-                            <div class="col-lg-5">
+                            <div class="col-lg-12">
                                 <div class="ibox float-e-margins">
                                     <div class="ibox-title">
-                                        <h5>Performance Management Period</h5>
-                                        <div class="ibox-tools">
-                                            <span class="label label-warning-light pull-right">3 periods</span>
-                                        </div>
+                                        <h5>Strategy/Goal Setting Framework</h5>
                                     </div>
                                     <div class="ibox-content">
-                                        <label class="font-noraml">Select a period: </label>
-                                        <div>
-                                            <select data-placeholder="Choose a period..." class="chosen-select" tabindex="2">
-                                                <option value="January 2016-December 2016">January 2016-December 2016</option>
-                                                <option selected value="January 2015-December 2015">January 2015-December 2015</option>
-                                                <option value="January 2014-December 2014">January 2014-December 2014</option>
-                                            </select>
-
-                                            <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newindicator">New period</button>
-                                            <div class="modal fade" id="newindicator" aria-hidden="true">
-                                                <div class="modal-dialog">
-                                                    <div class="modal-content">
-                                                        <div class="modal-body">
-                                                            <div class="row">
-                                                                <h3>New Performance Management Period</h3>
-
-                                                                <p>Please enter starting and ending month of the new period:</p>
-
-                                                                <form role="form">
-                                                                    <div class="form-group">
-                                                                        <label class="col-sm-2 control-label">Starting month: </label>
-                                                                        <div class="col-sm-4">
-                                                                            <input type="text" class="form-control">
-                                                                        </div>
-                                                                        <label class="col-sm-2 control-label">Ending month: </label>
-                                                                        <div class="col-sm-4">
-                                                                            <input type="text" class="form-control">
-                                                                        </div>
-                                                                    </div>
-                                                                    <div>
-                                                                        <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
-                                                                        <button type="button" class="btn btn-primary">Save changes</button>
-                                                                    </div>
-                                                                </form>
-
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-
-
-
-                                        </div>
-                                    </div>
-                                    <div class="ibox-content">
-                                        <!-- Evaluation cycle is loaded after Performance Management Period is selected above -->
-                                        <label class="font-noraml">Evaluation cycle:</label>
-                                        <div>
-                                            <!-- This cycle is a static text. When "Edit" button is clicked, allow cycle to be selected from among these: monthly, quarterly, half-yearly, yearly -->
-                                            <p class="form-control-static">Quarterly
-                                                <button class="btn-white btn btn-xs">Edit</button>
-                                            </p>
-                                        </div>
-                                    </div>
-
-                                </div>
-                            </div>
-                            <div class="col-lg-7">
-                                <div class="ibox float-e-margins">
-                                    <div class="ibox-title">
-                                        <!-- Planning phase can be set anytime, not necessarily within the selected Performance Management Period -->
-                                        <h5>Planning phase</h5>
-                                    </div>
-                                    <div class="ibox-content">
-
-                                        <table>
-                                            <tbody>
-                                                <tr>
-                                                    <td>
-                                                        <div class="form-group">
-                                                            <label class="control-label" for="date_added">From:</label>
-                                                            <div class="input-group date">
-                                                                <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-                                                                <input id="date_added" type="text" class="form-control" value="03/04/2014">
-                                                            </div>
-                                                        </div>
-                                                    </td>
-                                                    <td>
-                                                        <div class="form-group">
-                                                            <label class="control-label" for="date_added">To:</label>
-                                                            <div class="input-group date">
-                                                                <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-                                                                <input id="date_added" type="text" class="form-control" value="03/04/2014">
-                                                            </div>
-                                                        </div>
-                                                    </td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-
-
-
-
-                                    </div>
-                                </div>
-                                <div class="ibox float-e-margins">
-                                    <div class="ibox-title">
-
-                                        <!-- Coaching phase must bet set selected within performance management period -->
-                                        <!-- Planning phase can be set anytime, not necessarily within the selected Performance Management Period -->
-                                        <h5>Coaching/Evaluation Phases</h5>
-                                        <div class="ibox-tools">
-                                            <span class="label label-warning-light pull-right">4 phases</span>
-                                        </div>
-                                    </div>
-                                    <div class="ibox-content">
-                                        <table>
-
-                                            <label class="font-noraml">Select a phase: </label>
+                                        <div class="form-group">
+                                            <label class="font-noraml">Strategy/Goal Setting Framework</label>
                                             <div>
-                                                <select data-placeholder="Choose a period..." class="chosen-select" tabindex="2">
-                                                    <option value="1">1</option>
-                                                    <option selected value="2">2</option>
-                                                    <option value="3">3</option>
-                                                    <option value="3">4</option>
+                                                <select data-placeholder="Choose a framework..." class="chosen-select" tabindex="2">
+                                                    <option value="1">KPI</option>
+                                                    <option selected value="2">Balanced Score Card</option>
+                                                    <option value="3">OKR</option>
                                                 </select>
                                             </div>
-
-
-                                            <tbody>
-                                                <tr>
-                                                    <td>
-                                                        <div class="form-group">
-                                                            <label class="control-label" for="date_added">From:</label>
-                                                            <div class="input-group date">
-                                                                <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-                                                                <input id="date_added" type="text" class="form-control" value="03/04/2014">
-                                                            </div>
-                                                        </div>
-                                                    </td>
-                                                    <td>
-                                                        <div class="form-group">
-                                                            <label class="control-label" for="date_added">To:</label>
-                                                            <div class="input-group date">
-                                                                <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-                                                                <input id="date_added" type="text" class="form-control" value="03/04/2014">
-                                                            </div>
-                                                        </div>
-                                                    </td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-
-                                    </div>
-                                </div>
-                                <div class="ibox float-e-margins">
-                                    <div class="ibox-title">
-                                        <!-- Final evaluation phase must be set anytime, not necessarily within the selected Performance Management Period -->
-                                        <h5>Final Evaluation Phases</h5>
-                                    </div>
-                                    <div class="ibox-content">
-
-                                        <table>
-                                            <tbody>
-                                                <tr>
-                                                    <td>
-                                                        <div class="form-group">
-                                                            <label class="control-label" for="date_added">From:</label>
-                                                            <div class="input-group date">
-                                                                <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-                                                                <input id="date_added" type="text" class="form-control" value="03/04/2014">
-                                                            </div>
-                                                        </div>
-                                                    </td>
-                                                    <td>
-                                                        <div class="form-group">
-                                                            <label class="control-label" for="date_added">To:</label>
-                                                            <div class="input-group date">
-                                                                <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-                                                                <input id="date_added" type="text" class="form-control" value="03/04/2014">
-                                                            </div>
-                                                        </div>
-                                                    </td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-
+                                        </div>
 
                                     </div>
                                 </div>
                             </div>
-
-
                         </div>
                         <div class="footer">
                             <div class="pull-right">
