--- a/netishr/index.html
+++ b/netishr/index.html
@@ -151,7 +151,7 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="#">Coaching</a></li>
+                            <li><a href="performance_coaching.html">Coaching</a></li>
                             <li><a href="#">Evidence</a></li>
                             <li><a href="#"><span class="nav-label">Evaluation</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
